--- a/index.html
+++ b/index.html
@@ -36,31 +36,32 @@
 
 <div id="about" class="container my-5">
   <h2>About Me</h2>
-  <p>I'm a student at the University of Notre Dame majoring in Computer Science and Sociology. In my free time I enjoy playing interhall sports, tutoring at South Bend local elementary school Lincoln, and baking every Tuesday with my Hall Priest in residence!</p>
+  <p>I'm a student at the University of Notre Dame majoring in Computer Science and Sociology. In my free time I enjoy playing interhall sports, tutoring 2nd and 3rd graders at South Bend local elementary school Lincoln, and baking every Tuesday with my Hall Priest in residence!</p>
 </div>
 
 <div id="experience" class="container my-5">
   <h2>Experience</h2>
   <ul>
-    <li><strong>Institute for Social Concerns Fellowship (Summer 2025)</strong><br>Expected to conduct research centered around technology and sustainability at the Govardhan Ecovillage located outside Mumbai, India.</li>
-    <li><strong>Research assistant, Notre Dame (January 2025)</strong><br>Researched applied graph algorithms and network science with Professor Milenkovic.</li>
-    <li><strong>Sales Associate, The Gap Inc.(2023-2024)</strong><br>Provided customer service and styling.</li>
+    <li><strong>Engineering Fellow (Summer 2025)</strong><br>Conducted research around technology and sustainability at the Govardhan Ecovillage located outside Mumbai, India.</li>
+    <li><strong>Research assistant, Notre Dame (January 2025 - Present)</strong><br>Researched applied graph algorithms and network biology with Professor Milenkovic.</li>
+    <li><strong>Discrete Mathematics Teacher's Assistant (August 2025 - Present)</strong><br>advise students by hosting office hours for those in need of extra help outside of class.</li>
+    <li><strong>Learning Resource Center Mathematics Tutor (August 2025 - Present)</strong><br>Tutor Notre Dame students in Calculus I, II, III, and Linear Algebra with Differential Equations.</li>
+    <li><strong>TutorND (August 2024 - Present)</strong><br>Tutor 2nd and 3rd grade students from local South Bend elementary schools who struggle to pass the state-wide IREAD exam.</li>
   </ul>
 </div>
 
 <div id="projects" class="container my-5">
   <h2>Projects & Coursework</h2>
   <ul>
-    <li><strong>Expected Discrete Mathematics TA (2025)</strong>: Host office hours, grade exams, work with students.</li>
-    <li><strong>Obesity in America Website Project (2024)</strong>: Built an HTML website integrating CSV data to highlight the obesity trends within the US.</li>
-    <li><strong>Relevant Coursework</strong>: Discrete Mathematics, Data Structures, Systems Programming, Linear Algebra and Differential Equations.</li>
+    <li><strong>Obesity in America Website Project (2024)</strong>: Built an HTML website integrating CSV data to highlight the obesity trends within the US. Link: https://egoodrow.github.io/Project-Group-10/</li>
+    <li><strong>Relevant Coursework</strong>: Fundamentals of Computing, Discrete Mathematics, Data Structures, Systems Programming, Linear Algebra and Differential Equations, Theory of Computation.</li>
   </ul>
 </div>
 
 <div id="skills" class="container my-5">
   <h2>Technical and Language Skills</h2>
   <ul>
-    <li>Programming: Python, C, Linux</li>
+    <li>Programming: Python, C, C++, Java, JavaScript, Bash, HTML, CSS, Linux/Unix</li>
     <li>Languages: Spanish (Conversational)</li>
   </ul>
 </div>
